# rico

./: .cursorignore  .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: benchmark.yaml  build_test.yml  publish.yml
apps/benchmark/: Cargo.toml
apps/benchmark/benches/: parser_benchmark.rs
apps/benchmark/benches/fixtures/: large.thrift
apps/benchmark/src/: main.rs
apps/scan/: Cargo.toml  README.md
apps/scan/src/: main.rs
apps/web/: README.md  package.json  rsbuild.config.ts  tailwind.config.ts
apps/web/public/: index.html
apps/web/src/: App.tsx  index.css  index.tsx
apps/web/src/components/converter/: ConversionToggle.tsx
apps/web/src/components/editor/: ThriftEditor.tsx
apps/web/src/components/icons/: ArrowRight.tsx
apps/web/src/components/layout/: Footer.tsx  Header.tsx
apps/web/src/components/logo/: RicoLogo.tsx
apps/web/src/components/status/: ParserStatus.tsx  StatusDisplay.tsx
apps/web/src/components/theme/: ThemeToggle.tsx  theme-provider.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/lib/: constants.ts
apps/web/src/lib/examples/: index.ts
apps/web/src/lib/parser/: service.ts
apps/web/src/lib/rico/: index.ts
benchmark/: Cargo.toml
benchmark/src/: main.rs
creates/rico/: Cargo.toml  README.md
creates/rico/snapshots/: main__snapshots__common.snap  main__snapshots__const.snap  main__snapshots__enum.snap  main__snapshots__exception.snap  main__snapshots__include.snap  main__snapshots__namespace.snap  main__snapshots__service.snap  main__snapshots__typedef.snap  main__snapshots__union.snap
creates/rico/snapshots/parser/: main__snapshots__parser__common.snap  main__snapshots__parser__const.snap  main__snapshots__parser__enum.snap  main__snapshots__parser__exception.snap  main__snapshots__parser__include.snap  main__snapshots__parser__namespace.snap  main__snapshots__parser__service.snap  main__snapshots__parser__typedef.snap  main__snapshots__parser__union.snap
creates/rico/snapshots/writer/: main__snapshots__writer__common.snap  main__snapshots__writer__const.snap  main__snapshots__writer__enum.snap  main__snapshots__writer__exception.snap  main__snapshots__writer__include.snap  main__snapshots__writer__namespace.snap  main__snapshots__writer__service.snap  main__snapshots__writer__typedef.snap  main__snapshots__writer__union.snap
creates/rico/src/: lib.rs  main.rs
creates/rico/src/ast/: definitions.rs  mod.rs  types.rs
creates/rico/src/lexer/: mod.rs
creates/rico/src/parser/: definitions.rs  error.rs  factory.rs  location.rs  mod.rs  tests.rs  token.rs  types.rs  values.rs
creates/rico/src/writer/: common.rs  document.rs  mod.rs  types.rs  values.rs
creates/rico/tests/: main.rs
creates/rico/tests/fixtures/: common.thrift  const.thrift  enum.thrift  exception.thrift  include.thrift  namespace.thrift  service.thrift  typedef.thrift  union.thrift
creates/rico/tests/snapshots/: mod.rs  parser.rs  writer.rs
creates/rico/tests/unit/: ast_test.rs  lexer_test.rs  mod.rs  parser_test.rs
creates/rico_parser/: Cargo.toml  README.md
creates/rico_parser/src/: main.rs
creates/rico_parser/src/parser/: error.rs  factory.rs
lib/: Cargo.toml
lib/src/: lib.rs  main.rs
lib/src/ast/: definitions.rs  mod.rs  types.rs  values.rs
lib/src/lexer/: token.rs
lib/src/parser/: definitions.rs  error.rs  factory.rs  location.rs  location_ops.rs  mod.rs  parse_definitions.rs  parse_types.rs  parse_values.rs  token.rs  values.rs
lib/src/parser_next/: error.rs  mod.rs
lib/tests/: const.thrift  const_expect.json  enum.thrift  enum_expect.json  header.thrift  service.thrift  struct.thrift  struct_expect.json  typedef.thrift  typedef_expect.json
scan/: Cargo.toml
scan/src/: main.rs
tests/: common.thrift  common_expect.json  const.thrift  const_expect.json  enum.thrift  enum_expect.json  header_expect.json  service.thrift  service_expect.json  struct.thrift  struct_expect.json  typedef.thrift  typedef_expect.json  union.thrift  union_expect.json
wasm/rico/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
wasm/rico/examples/: basic.ts
wasm/rico/src/: error.rs  index.ts  lib.rs  types.ts  wasm.rs
