[workspace]
members = ["creates/rico", "apps/scan", "apps/benchmark"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["xxnmeet@gmail.com"]
edition = "2021"
description = "thrift parser"
license = "MIT"
repository = "https://github.com/xnmeet/rico"
keywords = ["thrift", "parser", "AST"]
categories = ["development-tools"]

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.9"
insta = { version = "1.41.1", features = ["json"] }
# publish = true
rico = { version = "0.1.5", path = "./creates/rico" }
rico-scan = { version = "0.1.0", path = "./apps/scan" }
# publish = false
rico-benchmark = { path = "./apps/benchmark" }
