[package]
name = "rico-scan"
version = "0.1.2"
edition = "2021"
description = "A high-performance CLI tool for parsing and validating Thrift IDL files"
license.workspace = true
documentation = "https://docs.rs/rico-scan"
repository.workspace = true
readme = "README.md"
keywords = ["thrift", "parser", "cli", "idl", "validator"]
categories = ["command-line-utilities", "development-tools", "parsing"]
authors.workspace = true
publish = true

[dependencies]
rico = { workspace = true, features = ["json"] }
clap = { version = "4.5.1", features = ["derive"] }
miette = { workspace = true }
indicatif = "0.17.8"
rayon = "1.8.1"
serde_json = { workspace = true }
colored = "2.1.0"
