[package]
name = "rico"
version = "0.1.6-alpha.0"
edition = "2021"
description = "A high-performance Apache Thrift IDL parser that converts Thrift IDL files to JSON AST"
license.workspace = true
documentation = "https://docs.rs/rico"
repository.workspace = true
readme = "README.md"
keywords = ["thrift", "parser", "ast", "idl", "json"]
categories = ["parsing", "development-tools"]
authors.workspace = true
exclude = ["tests/**/*", "snapshots/**/*"]
publish = true

[dependencies]
logos = "0.15.0"
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
