[package]
name = "rico-wasm"
version = "0.0.1"
edition = "2021"
description = "WebAssembly bindings for Rico - A high-performance Apache Thrift IDL parser and writer library."
license.workspace = true
documentation = "https://docs.rs/rico"
repository.workspace = true
readme = "README.md"
keywords = ["thrift", "parser", "ast", "idl", "json"]
categories = ["parsing", "development-tools"]
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rico = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { workspace = true }
miette = { workspace = true }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
